--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
-#    nathiss_count_to.example:
-#        class: Nathiss\Bundle\CountToBundle\Example
-#        arguments: ["@service_id", "plain_value", %parameter%]
+    nathiss_count_to.api:
+        class: Nathiss\Bundle\CountToBundle\Api\NathissCountToApi
+        arguments: ["@service_container"]
