--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "nathiss/count-to-bundle",
-    "description": "A Simple Symfony 2|3 bundle for generating delta between two dtime points.",
+    "description": "A Simple Symfony 2|3 bundle for generating delta between two time points.",
     "type": "symfony-bundle",
     "require": {
         "php": ">=5.6.0"
